--- a/youtube-clone-frontend/src/components/NavigationBar/NavigationBarStyles.module.css
+++ b/youtube-clone-frontend/src/components/NavigationBar/NavigationBarStyles.module.css
@@ -111,18 +111,16 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border: 2px solid yellow; */
 }
 
 .loggedIn {
     
 }
 
-.notLoggedIn {
-     
-}
+
 
 .loggedInBar {
+
     height: 100%;
     width: 100%;
     display: flex;
@@ -179,6 +177,20 @@ button {
     cursor: pointer;
 }
 
+.notLoggedIn {
+    width: 100%;   
+    height: 100%;
+}
+
+.signInButtonLink {
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding-right: 30px;
+}
 
 .signInButton {
     border: 1px solid rgb(87,87,87);
@@ -186,11 +198,12 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 75%;
+    height: 90%;
     column-gap: 5px;
-    font-size: 130%;
+    font-size: 150%;
     font-weight: bold;
     padding: 7px 10px;
+    cursor: pointer;
 }
 
 .signInButton:hover {
